Changes #16 	modified:   components/PostList.js 	modified:   components/PostPreview.js 	modified:   data/docker-magic.mdx 	modified:   data/hello-world.mdx 	modified:   pages/index.js 	modified:   pages/node.js/index.js 	renamed:    public/Sample Photos/sample1.jpg -> public/photos/sample1.jpg 	renamed:    public/Sample Photos/sample2.jpg -> public/photos/sample2.jpg 	deleted:    public/vercel.svg 	modified:   styles/globals.css

--- a/data/docker-magic.mdx
+++ b/data/docker-magic.mdx
@@ -1,10 +1,10 @@
 ---
 title: 'Dynamic Routing and Static Generation'
 excerpt: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Praesent elementum facilisis leo vel fringilla est ullamcorper eget. At imperdiet dui accumsan sit amet nulla facilities morbi tempus.'
-coverImage: '/Sample Photos/sample1.jpg'
+coverImage: '/photos/sample1.jpg'
 date: '2023-02-17T05:35:07.322Z'
 ogImage:
-  url: '/Sample Photos/sample1.jpg'
+  url: '/photos/sample1.jpg'
 ---
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Praesent elementum facilisis leo vel fringilla est ullamcorper eget. At imperdiet dui accumsan sit amet nulla facilities morbi tempus. Praesent elementum facilisis leo vel fringilla. Congue mauris rhoncus aenean vel. Egestas sed tempus urna et pharetra pharetra massa massa ultricies.
