Changes #16 	modified:   components/Post.js 	modified:   package-lock.json 	modified:   package.json 	new file:   pages/backend/index.js 	new file:   pages/frontend/index.js 	modified:   pages/index.js 	deleted:    pages/java/index.js 	deleted:    pages/node.js/index.js 	modified:   pages/portfolio/About.js 	modified:   pages/portfolio/index.js 	modified:   posts/Fundamentals of Web Security.mdx 	modified:   posts/Leadership Skills.mdx 	modified:   posts/Need for Data Security.mdx 	modified:   sections/Header.js

--- a/posts/Fundamentals of Web Security.mdx
+++ b/posts/Fundamentals of Web Security.mdx
@@ -3,7 +3,7 @@ title: 'Fundamentals of Web Security'
 excerpt: 'Security is the state of being protected from harm. It is essential to ensure protection while also
 outlying the measures laid out to protect the property.'
 coverImage: '/photos/sample2.jpg'
-date: '19th February 2023'
+date: 'Feb 19, 2023'
 ---
 
 Security is the state of being protected from harm. It is essential to ensure protection while also
