--- a/posts/Leadership Skills.mdx
+++ b/posts/Leadership Skills.mdx
@@ -3,7 +3,7 @@ title: 'Leadership skills in the society'
 excerpt: 'Leadership is defined as the action of leading a group of
 people or an organization.'
 coverImage: '/photos/sample2.jpg'
-date: '19th February 2023'
+date: 'Feb 17, 2023'
 ---
 
 ### Leadership skills in the society
