--- a/posts/Need for Data Security.mdx
+++ b/posts/Need for Data Security.mdx
@@ -2,7 +2,7 @@
 title: 'The Need for Data Security in Today’s Systems'
 excerpt: 'A data security system is fundamental to an organization since it can ensure that unauthorized personnel does not have access to key information of the organization by making them not comprehend any message being passed through.'
 coverImage: '/photos/sample1.jpg'
-date: '18th February 2023'
+date: 'Feb 18, 2023'
 ---
 
 A data security system is fundamental to an organization since it can ensure that unauthorized personnel does not have access to key information of the organization by making them not comprehend any message being passed through.
