Changes #17 	modified:   posts/Fundamentals of Web Security.mdx 	modified:   posts/Need for Data Security.mdx

--- a/posts/Fundamentals of Web Security.mdx
+++ b/posts/Fundamentals of Web Security.mdx
@@ -1,7 +1,6 @@
 ---
 title: 'Fundamentals of Web Security'
-excerpt: 'Security is the state of being protected from harm. It is essential to ensure protection while also
-outlying the measures laid out to protect the property.'
+excerpt: 'Security is the state of being protected from harm. It is essential...'
 coverImage: '/photos/sample2.jpg'
 date: 'Feb 19, 2023'
 ---
