--- a/posts/Need for Data Security.mdx
+++ b/posts/Need for Data Security.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'The Need for Data Security in Today’s Systems'
-excerpt: 'A data security system is fundamental to an organization since it can ensure that unauthorized personnel does not have access to key information of the organization by making them not comprehend any message being passed through.'
+excerpt: 'A data security system is fundamental to an organization since...'
 coverImage: '/photos/sample1.jpg'
 date: 'Feb 18, 2023'
 ---
