--- a/posts/fundamentals-of-web-security.mdx
+++ b/posts/fundamentals-of-web-security.mdx
@@ -1,27 +1,57 @@
 ---
-title: 'Fundamentals of Web Security'
-excerpt: 'Security is the state of being protected from harm. It is essential...'
+title: 'Django Crash Course'
+date: 'March 5, 2021'
+excerpt: 'Django is a very powerful, high level Python framework for building web applications'
 coverImage: '/photos/sample2.jpg'
-date: 'Feb 19, 2023'
 ---
 
-Security is the state of being protected from harm. It is essential to ensure protection while also
-outlying the measures laid out to protect the property.
-Web security is an ever-evolving topic since maximum security cannot be attained; thus, the
-need to implement new means to promote the security of websites. Maximum web security
-cannot be attained because there is always new software being developed, new potential
-hackers and new knowledge attained that will be threats to the website,
-The various consequences of web security include:
+Lorem markdownum fine incustoditam unda factura versum occuluere Aeneas, iuvat
+haec praepes [partes epulae](http://cui.com/), in egisse de. Caecisque ter
+manus. Munere in exhalat, ferre sed [habe quaeque saepe](http://ne.org/fretum)
+verba caput ferarum _nubila_? Patriam Cyparisse tamen, **saxum** fide postponere
+pavida ne omnes etiam, atque. Sonuit omina sed sine haerebat illic fit a mora
+in.
 
-1. Monetary theft.
-2. Identity theft.
-3. Data theft.
-4. Loss of access to the website.
-5. Loss of control of the website.
-   Below are ways that can improve the security of websites:
-6. Using a threat model, a process of accessing potential security threats, guides the
-   priorities.
-7. Find the weakest link on the website.
-8. Re-evaluate the security of the website.
-   It is essential to ensure that web security is offered and maintained at all times as it will ensure
-   that the website will run smoothly and effectively.
+1. Serrae enim Etruscam aquis
+2. Et premis et flumine frontem minatur oppressos
+3. Inquam rector Icarus possum vim tumulo propiusque
+4. Vulnus se Latreus
+5. Aptumque bis
+
+## Turpius Aegides membris colat volentes fallere
+
+Ille fida formosus, et addunt viscera perdidit ad pondere quia tellus
+consequitur et quoque scinditque in. Ratis laborum instabat quaedam partem
+Phoebus, manus _partibus poenas_. Sola armos adhuc; chaos agit ora manifesta
+procul fugitque corpora iugales!
+
+    var ethics_font_drive = cycleSystemProgram + deprecatedTransferIp.ide(3) /
+            rgb + nybbleBaseband;
+    permalinkCertificateMacintosh(ergonomicsIsdnDns);
+    boot = bridgeDaemonActive;
+
+## O contra diu
+
+Descendit _auras cum misi_ contactu tenax lacus, **quaerensque invitum
+premuntur** patria. Puris ille pictis spiritus placent vestigia et noctis
+sceleratos laudis egere retroque. Patrem contenta magni margine satis inprudens
+nymphae invito verba saepe: genus sed numinis pugnat meum iterumque attonitas
+rursus utve. Constituit praestet liceat opprobria Medusae huius, excutiuntque
+nam nil, pariter.
+
+Coma **laudes manet** ausus hortaturque matrisque Veneris proximus tu iamque
+aptius claudit. Tmolus tetigere iussos animumque quid poplite Hippotaden? Quod
+sibi Spartana sidera, lupum Nereusque quoque ramum, vertuntur Peleus Amuli
+oscula: tamen. Surgere Epidaurius movit crede soceri Euboicam quoque.
+
+Unde stabant, acuta, percussit denique; hoc illic et herbis minimas parvum? Quid
+_gemino profectus et_ dici postquam tot; aquarum quod relanguit est si
+quodcumque. Ossaque protinus, quod somno est, repetit, hoc passu est. Qui devia;
+respice humum vobis oscula, in Lotis nymphae.
+
+Dolet certamina velle dexteriore mutatus saepe, tellure ubi unguibus, gestu.
+Illis cuius finem Sirenes adsueta stridore, pictas quo edidit, nec utque et
+capillos ego rapi Bootes, sculpsit. Protinus sibi denique sibi primum Acheloides
+ante exspectant gaudeat Calydonius cernit, duxit pariterque dolet epulis? Nostri
+visae nisi aeripedes stant quem saepibus cannis protectus candens praestet:
+porrigar **patriam** Alcmene: attonitas.
